; ModuleID = '/home/carl/AnghaBench/openpilot/selfdrive/visiond/cameras/extr_camera_qcom.c_sensor_write_regs.c'
source_filename = "/home/carl/AnghaBench/openpilot/selfdrive/visiond/cameras/extr_camera_qcom.c_sensor_write_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.msm_camera_i2c_reg_array = type { i32 }
%struct.msm_camera_i2c_reg_setting = type { i64, i32, i32, i32, %struct.msm_camera_i2c_reg_array* }
%struct.sensorb_cfg_data = type { %struct.TYPE_4__, i32, i32 }
%struct.TYPE_4__ = type { %struct.msm_camera_i2c_reg_setting* }

@MSM_CAMERA_I2C_WORD_ADDR = common dso_local global i32 0, align 4
@CFG_WRITE_I2C_ARRAY = common dso_local global i32 0, align 4
@VIDIOC_MSM_SENSOR_CFG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sensor_write_regs(%struct.TYPE_5__* %0, %struct.msm_camera_i2c_reg_array* %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.msm_camera_i2c_reg_array*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.msm_camera_i2c_reg_setting, align 8
  %10 = alloca %struct.sensorb_cfg_data, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store %struct.msm_camera_i2c_reg_array* %1, %struct.msm_camera_i2c_reg_array** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = getelementptr inbounds %struct.msm_camera_i2c_reg_setting, %struct.msm_camera_i2c_reg_setting* %9, i32 0, i32 0
  %12 = load i64, i64* %7, align 8
  store i64 %12, i64* %11, align 8
  %13 = getelementptr inbounds %struct.msm_camera_i2c_reg_setting, %struct.msm_camera_i2c_reg_setting* %9, i32 0, i32 1
  %14 = load i32, i32* %8, align 4
  store i32 %14, i32* %13, align 8
  %15 = getelementptr inbounds %struct.msm_camera_i2c_reg_setting, %struct.msm_camera_i2c_reg_setting* %9, i32 0, i32 2
  store i32 0, i32* %15, align 4
  %16 = getelementptr inbounds %struct.msm_camera_i2c_reg_setting, %struct.msm_camera_i2c_reg_setting* %9, i32 0, i32 3
  %17 = load i32, i32* @MSM_CAMERA_I2C_WORD_ADDR, align 4
  store i32 %17, i32* %16, align 8
  %18 = getelementptr inbounds %struct.msm_camera_i2c_reg_setting, %struct.msm_camera_i2c_reg_setting* %9, i32 0, i32 4
  %19 = load %struct.msm_camera_i2c_reg_array*, %struct.msm_camera_i2c_reg_array** %6, align 8
  store %struct.msm_camera_i2c_reg_array* %19, %struct.msm_camera_i2c_reg_array** %18, align 8
  %20 = bitcast %struct.sensorb_cfg_data* %10 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %20, i8 0, i64 16, i1 false)
  %21 = load i32, i32* @CFG_WRITE_I2C_ARRAY, align 4
  %22 = getelementptr inbounds %struct.sensorb_cfg_data, %struct.sensorb_cfg_data* %10, i32 0, i32 1
  store i32 %21, i32* %22, align 8
  %23 = getelementptr inbounds %struct.sensorb_cfg_data, %struct.sensorb_cfg_data* %10, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  store %struct.msm_camera_i2c_reg_setting* %9, %struct.msm_camera_i2c_reg_setting** %24, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @VIDIOC_MSM_SENSOR_CFG, align 4
  %29 = call i32 @ioctl(i32 %27, i32 %28, %struct.sensorb_cfg_data* %10)
  ret i32 %29
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @ioctl(i32, i32, %struct.sensorb_cfg_data*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
